<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AssessmentDetailActivity">

   <RadioGroup
       android:id="@+id/assessment_radio_group"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginStart="20dp"
       android:layout_marginTop="30dp"
       app:layout_constraintTop_toTopOf="parent">

       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/assessment_type"
           android:textSize="25sp"/>

       <androidx.appcompat.widget.AppCompatRadioButton
           android:id="@+id/radio_objective"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginVertical="10dp"
           android:layout_marginStart="25dp"
           style="@style/Widget.AppCompat.CompoundButton.RadioButton"
           android:textSize="20sp"
           android:checked="true"
           android:text="@string/objective"
           android:buttonTint="@color/colorPrimaryDark" />
       <androidx.appcompat.widget.AppCompatRadioButton
           android:id="@+id/radio_performance"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="25dp"
           style="@style/Widget.AppCompat.CompoundButton.RadioButton"
           android:text="@string/performance"
           android:textSize="20sp"
           android:buttonTint="@color/colorPrimaryDark" />

   </RadioGroup>

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/start_date_textfield"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/start_date"
       android:layout_marginTop="40dp"
       android:layout_marginStart="20dp"
       android:labelFor="@id/start_date_edittext"
       android:textSize="25sp"
       app:layout_constraintTop_toBottomOf="@id/assessment_radio_group"
       app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/start_date_edittext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:focusableInTouchMode="false"
        android:textColor="@color/black"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@id/start_date_textfield"
        app:layout_constraintStart_toEndOf="@id/start_date_textfield" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/end_date"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/start_date_textfield"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/end_date_edittext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:focusableInTouchMode="false"
        android:textColor="@color/black"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@id/end_date_textview"
        app:layout_constraintStart_toStartOf="@id/start_date_edittext" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_assessment_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        style="@style/btn_large"
        app:layout_constraintTop_toBottomOf="@id/end_date_textview" />



</androidx.constraintlayout.widget.ConstraintLayout>